<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_marginBottom="@dimen/small_margin"
    app:cardCornerRadius="12dp"
    android:padding="@dimen/small_margin"
    android:id="@+id/room_description_item"
    android:background="@color/dark_blue">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_blue">

        <androidx.cardview.widget.CardView
            android:layout_marginLeft="@dimen/default_margin"
            android:id="@+id/cardView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/room_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/room_image" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/home_page_room_name"
            style="@style/TitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:text="@string/home_page_room_name"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="@+id/cardView" />

        <TextView
            android:id="@+id/home_page_number_of_device"
            style="@style/SubtitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_page_number_of_device"
            app:layout_constraintStart_toStartOf="@+id/home_page_room_name"
            app:layout_constraintTop_toBottomOf="@+id/home_page_room_name" />

        <TextView
            android:id="@+id/home_page_number_of_sensor"
            style="@style/SubtitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_page_number_of_sensor"
            app:layout_constraintStart_toStartOf="@+id/home_page_number_of_device"
            app:layout_constraintTop_toBottomOf="@+id/home_page_number_of_device" />

        <ImageView
            android:id="@+id/following_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/following"
            app:tint="@color/medium_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="@dimen/default_margin"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>